deploy/ftsgw/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftsgw-server
  namespace: ftsgw
spec:
  selector:
    app: ftsgw-server
  ports:
  - name: https
    port: 8443
    targetPort: 8443
