deploy/ftsgw/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ftsgw-server
  namespace: ftsgw
spec:
  to:
    kind: Service
    name: ftsgw-server
  port:
    targetPort: https
  tls:
    termination: passthrough
